# Norli-Daddy-Bluesky

./: .gitignore  README.md  book_state.json  dummy.md  pyproject.toml  requirements.txt
.github/workflows/: book-daddy-bot.yml
src/: main.py
